fix(all): feat with frontend & add docs
