# internal/api/router.go
@@ -38,6 +38,7 @@ func NewRouter(
 		orderHandler:       orderHandler,
 		orderWorkerHandler: orderWorkerHandler,
 		statisticsHandler:  statisticsHandler,
+		workerHandler:      workerHandler,
 		ginEngine:          gin.Default(),
 	}
 }
@@ -67,6 +68,8 @@ func (r *Router) Init(jwtService jwt.TokenService, logger logger.Logger) {
 	workerGroup.GET("/orders/:id/reports", r.orderWorkerHandler.GetByOrder)
 	workerGroup.PATCH("/orders/report", r.orderWorkerHandler.UpdateReport)
 	workerGroup.PATCH("/orders/:id/complete", r.orderHandler.Complete)
+	workerGroup.GET("/workers", r.workerHandler.ListWorkers)
+	workerGroup.GET("/me", r.workerHandler.GetMe)
 
 	// ВЛАДЕЛЕЦ // --- только владелец
 	ownerGroup.POST("/workers", r.workerHandler.CreateWorker)
@@ -76,10 +79,13 @@ func (r *Router) Init(jwtService jwt.TokenService, logger logger.Logger) {
 	ownerGroup.PATCH("/requests/:id/cancel", r.requestHandler.CancelRequest)
 	ownerGroup.POST("/orders/direct", r.orderHandler.CreateDirect)
 	ownerGroup.GET("/orders/planned", r.orderHandler.ListAllPlanned)
+	ownerGroup.PATCH("/orders/:id/complete", r.orderHandler.CompleteByOwner)
 	ownerGroup.GET("/orders/history", r.orderWorkerHandler.ListAllCompleted)
 	ownerGroup.DELETE("/orders/:orderId/workers/:workerId", r.orderWorkerHandler.RemoveWorker)
 	ownerGroup.GET("/statistics/workers/:workerId", r.statisticsHandler.ByWorker)
 	ownerGroup.GET("/statistics/all", r.statisticsHandler.AllWorkers)
+	ownerGroup.GET("/statistics/summary", r.statisticsHandler.Summary)
+	
 
 	// Публичная заявка с сайта
 	r.ginEngine.POST("/api/v1/public/requests", r.requestHandler.CreateRequest)
